[package]
name = "Space-Engine"
version = "0.1.0"
authors = ["Sam Gosden <s.j.gosden2@newcastle.ac.uk>"]
edition = "2021"

[features]

[toolchain]
channel = "nightly"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1


# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
ultraviolet = {version ="0.9.2", features = ["f64"]}
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
iyes_perf_ui = "0.3.0"
